metacc_qmake/build-metacc-Desktop-Debug/mcc_parser.output
Terminals unused in grammar

    MCC_METHOD
    CSTRING


Grammar

    0 $accept: source_text $end

    1 source_text: symbol_definition_list

    2 symbol_definition_list: symbol_definition
    3                       | symbol_definition_list symbol_definition

    4 symbol_definition: symbol_key COLON symbol_value_list SEMICOLON
    5                  | symbol_key METHODS method_initializer COLON symbol_value_list SEMICOLON
    6                  | symbol_key FIELDS field_initializer COLON symbol_value_list SEMICOLON
    7                  | symbol_key FIELDS field_initializer METHODS method_initializer COLON symbol_value_list SEMICOLON

    8 symbol_key: MCC_SYMBOL
    9           | MCC_SYMBOL key_attributes

   10 key_attributes: SKIP
   11               | TERMINAL

   12 symbol_value_list: symbol_value
   13                  | symbol_value_list VBAR symbol_value

   14 symbol_value: symbol_value_element_list MLP symbol_value_implementation MRP
   15             | symbol_value_element_list

   16 symbol_value_element_list: symbol_value_element
   17                          | symbol_value_element_list symbol_value_element

   18 symbol_value_element: MCC_STRING
   19                     | MCC_SYMBOL
   20                     | LIST LP list_parameter RP
   21                     | OPTION LP option_parameter RP
   22                     | STAR LP star_parameter RP
   23                     | NULL_
   24                     | token_definition

   25 list_parameter: list_parameter_value COMMA list_parameter_delim

   26 option_parameter: option_parameter_value

   27 star_parameter: star_parameter_value

   28 list_parameter_value: symbol_value_list

   29 list_parameter_delim: MCC_STRING

   30 option_parameter_value: symbol_value_list

   31 star_parameter_value: list_parameter_value

   32 token_definition: TOKEN LP MCC_STRING RP

   33 symbol_value_implementation: symbol_value_initializer_list

   34 symbol_value_initializer_list: symbol_value_initializer
   35                              | symbol_value_initializer_list symbol_value_initializer

   36 symbol_value_initializer: initializer_call

   37 initializer_call: C_function_call

   38 field_initializer: MLP field_declaration_list MRP

   39 field_declaration_list: field_declaration
   40                       | field_declaration_list field_declaration

   41 field_declaration: C_variable_declaration

   42 method_initializer: MLP method_declaration_list MRP

   43 method_declaration_list: method_declaration
   44                        | method_declaration_list method_declaration

   45 method_declaration: C_function_declaration

   46 C_variable_declaration: C_declaration_qualifier C_init_declarator_list SEMICOLON

   47 C_function_declaration: C_declaration_qualifier C_direct_declarator LP RP SEMICOLON

   48 C_function_call: C_direct_declarator LP RP SEMICOLON

   49 C_declaration_qualifier: C_MCC_TYPE
   50                        | MCC_SYMBOL

   51 C_init_declarator_list: C_init_declarator
   52                       | C_init_declarator_list C_init_declarator

   53 C_init_declarator: C_declarator

   54 C_declarator: ASTERISK C_declarator
   55             | C_direct_declarator

   56 C_direct_declarator: MCC_SYMBOL
   57                    | C_IDENTIFIER
   58                    | LP C_declarator RP


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COLON (258) 4 5 6 7
    SEMICOLON (259) 4 5 6 7 46 47 48
    MCC_STRING <token_str> (260) 18 29 32
    MCC_SYMBOL <token_str> (261) 8 9 19 50 56
    MCC_METHOD <token_str> (262)
    C_MCC_TYPE <token_str> (263) 49
    C_IDENTIFIER <token_str> (264) 57
    VBAR (265) 13
    LP (266) 20 21 22 32 47 48 58
    RP (267) 20 21 22 32 47 48 58
    MLP (268) 14 38 42
    MRP (269) 14 38 42
    COMMA (270) 25
    ASTERISK (271) 54
    LIST (272) 20
    OPTION (273) 21
    STAR (274) 22
    CSTRING (275)
    NULL_ (276) 23
    SKIP <token_str> (277) 10
    TERMINAL <token_str> (278) 11
    TOKEN <token_str> (279) 32
    FIELDS (280) 6 7
    METHODS (281) 5 7


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    source_text (28)
        on left: 1
        on right: 0
    symbol_definition_list <ast_symbol_definition_list> (29)
        on left: 2 3
        on right: 1 3
    symbol_definition <ast_symbol_definition> (30)
        on left: 4 5 6 7
        on right: 2 3
    symbol_key <ast_symbol_key> (31)
        on left: 8 9
        on right: 4 5 6 7
    key_attributes <ast_key_attributes> (32)
        on left: 10 11
        on right: 9
    symbol_value_list <ast_symbol_value_list> (33)
        on left: 12 13
        on right: 4 5 6 7 13 28 30
    symbol_value <ast_symbol_value> (34)
        on left: 14 15
        on right: 12 13
    symbol_value_element_list <ast_symbol_value_element_list> (35)
        on left: 16 17
        on right: 14 15 17
    symbol_value_element <ast_symbol_value_element> (36)
        on left: 18 19 20 21 22 23 24
        on right: 16 17
    list_parameter <ast_list_parameter> (37)
        on left: 25
        on right: 20
    option_parameter <ast_option_parameter> (38)
        on left: 26
        on right: 21
    star_parameter <ast_star_parameter> (39)
        on left: 27
        on right: 22
    list_parameter_value <ast_list_parameter_value> (40)
        on left: 28
        on right: 25 31
    list_parameter_delim <token_str> (41)
        on left: 29
        on right: 25
    option_parameter_value <ast_option_parameter_value> (42)
        on left: 30
        on right: 26
    star_parameter_value <ast_star_parameter_value> (43)
        on left: 31
        on right: 27
    token_definition <ast_token_definition> (44)
        on left: 32
        on right: 24
    symbol_value_implementation <ast_symbol_value_implementation> (45)
        on left: 33
        on right: 14
    symbol_value_initializer_list <ast_symbol_value_initializer_list> (46)
        on left: 34 35
        on right: 33 35
    symbol_value_initializer <ast_symbol_value_initializer> (47)
        on left: 36
        on right: 34 35
    initializer_call <ast_initializer_call> (48)
        on left: 37
        on right: 36
    field_initializer <ast_field_initializer> (49)
        on left: 38
        on right: 6 7
    field_declaration_list <ast_field_declaration_list> (50)
        on left: 39 40
        on right: 38 40
    field_declaration <ast_field_declaration> (51)
        on left: 41
        on right: 39 40
    method_initializer <ast_method_initializer> (52)
        on left: 42
        on right: 5 7
    method_declaration_list <ast_method_declaration_list> (53)
        on left: 43 44
        on right: 42 44
    method_declaration <ast_method_declaration> (54)
        on left: 45
        on right: 43 44
    C_variable_declaration <ast_C_variable_declaration> (55)
        on left: 46
        on right: 41
    C_function_declaration <ast_C_function_declaration> (56)
        on left: 47
        on right: 45
    C_function_call <ast_C_function_call> (57)
        on left: 48
        on right: 37
    C_declaration_qualifier <ast_C_declaration_qualifier> (58)
        on left: 49 50
        on right: 46 47
    C_init_declarator_list <ast_C_init_declarator_list> (59)
        on left: 51 52
        on right: 46 52
    C_init_declarator <ast_C_init_declarator> (60)
        on left: 53
        on right: 51 52
    C_declarator <ast_C_declarator> (61)
        on left: 54 55
        on right: 53 54 58
    C_direct_declarator <ast_C_direct_declarator> (62)
        on left: 56 57 58
        on right: 47 48 55


State 0

    0 $accept: . source_text $end

    MCC_SYMBOL  shift, and go to state 1

    source_text             go to state 2
    symbol_definition_list  go to state 3
    symbol_definition       go to state 4
    symbol_key              go to state 5


State 1

    8 symbol_key: MCC_SYMBOL .
    9           | MCC_SYMBOL . key_attributes

    SKIP      shift, and go to state 6
    TERMINAL  shift, and go to state 7

    $default  reduce using rule 8 (symbol_key)

    key_attributes  go to state 8


State 2

    0 $accept: source_text . $end

    $end  shift, and go to state 9


State 3

    1 source_text: symbol_definition_list .
    3 symbol_definition_list: symbol_definition_list . symbol_definition

    MCC_SYMBOL  shift, and go to state 1

    $default  reduce using rule 1 (source_text)

    symbol_definition  go to state 10
    symbol_key         go to state 5


State 4

    2 symbol_definition_list: symbol_definition .

    $default  reduce using rule 2 (symbol_definition_list)


State 5

    4 symbol_definition: symbol_key . COLON symbol_value_list SEMICOLON
    5                  | symbol_key . METHODS method_initializer COLON symbol_value_list SEMICOLON
    6                  | symbol_key . FIELDS field_initializer COLON symbol_value_list SEMICOLON
    7                  | symbol_key . FIELDS field_initializer METHODS method_initializer COLON symbol_value_list SEMICOLON

    COLON    shift, and go to state 11
    FIELDS   shift, and go to state 12
    METHODS  shift, and go to state 13


State 6

   10 key_attributes: SKIP .

    $default  reduce using rule 10 (key_attributes)


State 7

   11 key_attributes: TERMINAL .

    $default  reduce using rule 11 (key_attributes)


State 8

    9 symbol_key: MCC_SYMBOL key_attributes .

    $default  reduce using rule 9 (symbol_key)


State 9

    0 $accept: source_text $end .

    $default  accept


State 10

    3 symbol_definition_list: symbol_definition_list symbol_definition .

    $default  reduce using rule 3 (symbol_definition_list)


State 11

    4 symbol_definition: symbol_key COLON . symbol_value_list SEMICOLON

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    symbol_value_list          go to state 21
    symbol_value               go to state 22
    symbol_value_element_list  go to state 23
    symbol_value_element       go to state 24
    token_definition           go to state 25


State 12

    6 symbol_definition: symbol_key FIELDS . field_initializer COLON symbol_value_list SEMICOLON
    7                  | symbol_key FIELDS . field_initializer METHODS method_initializer COLON symbol_value_list SEMICOLON

    MLP  shift, and go to state 26

    field_initializer  go to state 27


State 13

    5 symbol_definition: symbol_key METHODS . method_initializer COLON symbol_value_list SEMICOLON

    MLP  shift, and go to state 28

    method_initializer  go to state 29


State 14

   18 symbol_value_element: MCC_STRING .

    $default  reduce using rule 18 (symbol_value_element)


State 15

   19 symbol_value_element: MCC_SYMBOL .

    $default  reduce using rule 19 (symbol_value_element)


State 16

   20 symbol_value_element: LIST . LP list_parameter RP

    LP  shift, and go to state 30


State 17

   21 symbol_value_element: OPTION . LP option_parameter RP

    LP  shift, and go to state 31


State 18

   22 symbol_value_element: STAR . LP star_parameter RP

    LP  shift, and go to state 32


State 19

   23 symbol_value_element: NULL_ .

    $default  reduce using rule 23 (symbol_value_element)


State 20

   32 token_definition: TOKEN . LP MCC_STRING RP

    LP  shift, and go to state 33


State 21

    4 symbol_definition: symbol_key COLON symbol_value_list . SEMICOLON
   13 symbol_value_list: symbol_value_list . VBAR symbol_value

    SEMICOLON  shift, and go to state 34
    VBAR       shift, and go to state 35


State 22

   12 symbol_value_list: symbol_value .

    $default  reduce using rule 12 (symbol_value_list)


State 23

   14 symbol_value: symbol_value_element_list . MLP symbol_value_implementation MRP
   15             | symbol_value_element_list .
   17 symbol_value_element_list: symbol_value_element_list . symbol_value_element

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    MLP         shift, and go to state 36
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    $default  reduce using rule 15 (symbol_value)

    symbol_value_element  go to state 37
    token_definition      go to state 25


State 24

   16 symbol_value_element_list: symbol_value_element .

    $default  reduce using rule 16 (symbol_value_element_list)


State 25

   24 symbol_value_element: token_definition .

    $default  reduce using rule 24 (symbol_value_element)


State 26

   38 field_initializer: MLP . field_declaration_list MRP

    MCC_SYMBOL  shift, and go to state 38
    C_MCC_TYPE  shift, and go to state 39

    field_declaration_list   go to state 40
    field_declaration        go to state 41
    C_variable_declaration   go to state 42
    C_declaration_qualifier  go to state 43


State 27

    6 symbol_definition: symbol_key FIELDS field_initializer . COLON symbol_value_list SEMICOLON
    7                  | symbol_key FIELDS field_initializer . METHODS method_initializer COLON symbol_value_list SEMICOLON

    COLON    shift, and go to state 44
    METHODS  shift, and go to state 45


State 28

   42 method_initializer: MLP . method_declaration_list MRP

    MCC_SYMBOL  shift, and go to state 38
    C_MCC_TYPE  shift, and go to state 39

    method_declaration_list  go to state 46
    method_declaration       go to state 47
    C_function_declaration   go to state 48
    C_declaration_qualifier  go to state 49


State 29

    5 symbol_definition: symbol_key METHODS method_initializer . COLON symbol_value_list SEMICOLON

    COLON  shift, and go to state 50


State 30

   20 symbol_value_element: LIST LP . list_parameter RP

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    symbol_value_list          go to state 51
    symbol_value               go to state 22
    symbol_value_element_list  go to state 23
    symbol_value_element       go to state 24
    list_parameter             go to state 52
    list_parameter_value       go to state 53
    token_definition           go to state 25


State 31

   21 symbol_value_element: OPTION LP . option_parameter RP

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    symbol_value_list          go to state 54
    symbol_value               go to state 22
    symbol_value_element_list  go to state 23
    symbol_value_element       go to state 24
    option_parameter           go to state 55
    option_parameter_value     go to state 56
    token_definition           go to state 25


State 32

   22 symbol_value_element: STAR LP . star_parameter RP

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    symbol_value_list          go to state 51
    symbol_value               go to state 22
    symbol_value_element_list  go to state 23
    symbol_value_element       go to state 24
    star_parameter             go to state 57
    list_parameter_value       go to state 58
    star_parameter_value       go to state 59
    token_definition           go to state 25


State 33

   32 token_definition: TOKEN LP . MCC_STRING RP

    MCC_STRING  shift, and go to state 60


State 34

    4 symbol_definition: symbol_key COLON symbol_value_list SEMICOLON .

    $default  reduce using rule 4 (symbol_definition)


State 35

   13 symbol_value_list: symbol_value_list VBAR . symbol_value

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    symbol_value               go to state 61
    symbol_value_element_list  go to state 23
    symbol_value_element       go to state 24
    token_definition           go to state 25


State 36

   14 symbol_value: symbol_value_element_list MLP . symbol_value_implementation MRP

    MCC_SYMBOL    shift, and go to state 62
    C_IDENTIFIER  shift, and go to state 63
    LP            shift, and go to state 64

    symbol_value_implementation    go to state 65
    symbol_value_initializer_list  go to state 66
    symbol_value_initializer       go to state 67
    initializer_call               go to state 68
    C_function_call                go to state 69
    C_direct_declarator            go to state 70


State 37

   17 symbol_value_element_list: symbol_value_element_list symbol_value_element .

    $default  reduce using rule 17 (symbol_value_element_list)


State 38

   50 C_declaration_qualifier: MCC_SYMBOL .

    $default  reduce using rule 50 (C_declaration_qualifier)


State 39

   49 C_declaration_qualifier: C_MCC_TYPE .

    $default  reduce using rule 49 (C_declaration_qualifier)


State 40

   38 field_initializer: MLP field_declaration_list . MRP
   40 field_declaration_list: field_declaration_list . field_declaration

    MCC_SYMBOL  shift, and go to state 38
    C_MCC_TYPE  shift, and go to state 39
    MRP         shift, and go to state 71

    field_declaration        go to state 72
    C_variable_declaration   go to state 42
    C_declaration_qualifier  go to state 43


State 41

   39 field_declaration_list: field_declaration .

    $default  reduce using rule 39 (field_declaration_list)


State 42

   41 field_declaration: C_variable_declaration .

    $default  reduce using rule 41 (field_declaration)


State 43

   46 C_variable_declaration: C_declaration_qualifier . C_init_declarator_list SEMICOLON

    MCC_SYMBOL    shift, and go to state 62
    C_IDENTIFIER  shift, and go to state 63
    LP            shift, and go to state 64
    ASTERISK      shift, and go to state 73

    C_init_declarator_list  go to state 74
    C_init_declarator       go to state 75
    C_declarator            go to state 76
    C_direct_declarator     go to state 77


State 44

    6 symbol_definition: symbol_key FIELDS field_initializer COLON . symbol_value_list SEMICOLON

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    symbol_value_list          go to state 78
    symbol_value               go to state 22
    symbol_value_element_list  go to state 23
    symbol_value_element       go to state 24
    token_definition           go to state 25


State 45

    7 symbol_definition: symbol_key FIELDS field_initializer METHODS . method_initializer COLON symbol_value_list SEMICOLON

    MLP  shift, and go to state 28

    method_initializer  go to state 79


State 46

   42 method_initializer: MLP method_declaration_list . MRP
   44 method_declaration_list: method_declaration_list . method_declaration

    MCC_SYMBOL  shift, and go to state 38
    C_MCC_TYPE  shift, and go to state 39
    MRP         shift, and go to state 80

    method_declaration       go to state 81
    C_function_declaration   go to state 48
    C_declaration_qualifier  go to state 49


State 47

   43 method_declaration_list: method_declaration .

    $default  reduce using rule 43 (method_declaration_list)


State 48

   45 method_declaration: C_function_declaration .

    $default  reduce using rule 45 (method_declaration)


State 49

   47 C_function_declaration: C_declaration_qualifier . C_direct_declarator LP RP SEMICOLON

    MCC_SYMBOL    shift, and go to state 62
    C_IDENTIFIER  shift, and go to state 63
    LP            shift, and go to state 64

    C_direct_declarator  go to state 82


State 50

    5 symbol_definition: symbol_key METHODS method_initializer COLON . symbol_value_list SEMICOLON

    MCC_STRING  shift, and go to state 14
    MCC_SYMBOL  shift, and go to state 15
    LIST        shift, and go to state 16
    OPTION      shift, and go to state 17
    STAR        shift, and go to state 18
    NULL_       shift, and go to state 19
    TOKEN       shift, and go to state 20

    symbol_value_list          go to state 83
    symbol_value               go to state 22
    symbol_value_element_list  go to state 23
    symbol_value_element       go to state 24
    token_definition           go to state 25


State 51

   13 symbol_value_list: symbol_value_list . VBAR symbol_value
   28 list_parameter_value: symbol_value_list .

    VBAR  shift, and go to state 35

    $default  reduce using rule 28 (list_parameter_value)


State 52

   20 symbol_value_element: LIST LP list_parameter . RP

    RP  shift, and go to state 84


State 53

   25 list_parameter: list_parameter_value . COMMA list_parameter_delim

    COMMA  shift, and go to state 85


State 54

   13 symbol_value_list: symbol_value_list . VBAR symbol_value
   30 option_parameter_value: symbol_value_list .

    VBAR  shift, and go to state 35

    $default  reduce using rule 30 (option_parameter_value)


State 55

   21 symbol_value_element: OPTION LP option_parameter . RP

    RP  shift, and go to state 86


State 56

   26 option_parameter: option_parameter_value .

    $default  reduce using rule 26 (option_parameter)


State 57

   22 symbol_value_element: STAR LP star_parameter . RP

    RP  shift, and go to state 87


State 58

   31 star_parameter_value: list_parameter_value .

    $default  reduce using rule 31 (star_parameter_value)


State 59

   27 star_parameter: star_parameter_value .

    $default  reduce using rule 27 (star_parameter)


State 60

   32 token_definition: TOKEN LP MCC_STRING . RP

    RP  shift, and go to state 88


State 61

   13 symbol_value_list: symbol_value_list VBAR symbol_value .

    $default  reduce using rule 13 (symbol_value_list)


State 62

   56 C_direct_declarator: MCC_SYMBOL .

    $default  reduce using rule 56 (C_direct_declarator)


State 63

   57 C_direct_declarator: C_IDENTIFIER .

    $default  reduce using rule 57 (C_direct_declarator)


State 64

   58 C_direct_declarator: LP . C_declarator RP

    MCC_SYMBOL    shift, and go to state 62
    C_IDENTIFIER  shift, and go to state 63
    LP            shift, and go to state 64
    ASTERISK      shift, and go to state 73

    C_declarator         go to state 89
    C_direct_declarator  go to state 77


State 65

   14 symbol_value: symbol_value_element_list MLP symbol_value_implementation . MRP

    MRP  shift, and go to state 90


State 66

   33 symbol_value_implementation: symbol_value_initializer_list .
   35 symbol_value_initializer_list: symbol_value_initializer_list . symbol_value_initializer

    MCC_SYMBOL    shift, and go to state 62
    C_IDENTIFIER  shift, and go to state 63
    LP            shift, and go to state 64

    $default  reduce using rule 33 (symbol_value_implementation)

    symbol_value_initializer  go to state 91
    initializer_call          go to state 68
    C_function_call           go to state 69
    C_direct_declarator       go to state 70


State 67

   34 symbol_value_initializer_list: symbol_value_initializer .

    $default  reduce using rule 34 (symbol_value_initializer_list)


State 68

   36 symbol_value_initializer: initializer_call .

    $default  reduce using rule 36 (symbol_value_initializer)


State 69

   37 initializer_call: C_function_call .

    $default  reduce using rule 37 (initializer_call)


State 70

   48 C_function_call: C_direct_declarator . LP RP SEMICOLON

    LP  shift, and go to state 92


State 71

   38 field_initializer: MLP field_declaration_list MRP .

    $default  reduce using rule 38 (field_initializer)


State 72

   40 field_declaration_list: field_declaration_list field_declaration .

    $default  reduce using rule 40 (field_declaration_list)


State 73

   54 C_declarator: ASTERISK . C_declarator

    MCC_SYMBOL    shift, and go to state 62
    C_IDENTIFIER  shift, and go to state 63
    LP            shift, and go to state 64
    ASTERISK      shift, and go to state 73

    C_declarator         go to state 93
    C_direct_declarator  go to state 77


State 74

   46 C_variable_declaration: C_declaration_qualifier C_init_declarator_list . SEMICOLON
   52 C_init_declarator_list: C_init_declarator_list . C_init_declarator

    SEMICOLON     shift, and go to state 94
    MCC_SYMBOL    shift, and go to state 62
    C_IDENTIFIER  shift, and go to state 63
    LP            shift, and go to state 64
    ASTERISK      shift, and go to state 73

    C_init_declarator    go to state 95
    C_declarator         go to state 76
    C_direct_declarator  go to state 77


State 75

   51 C_init_declarator_list: C_init_declarator .

    $default  reduce using rule 51 (C_init_declarator_list)


State 76

   53 C_init_declarator: C_declarator .

    $default  reduce using rule 53 (C_init_declarator)


State 77

   55 C_declarator: C_direct_declarator .

    $default  reduce using rule 55 (C_declarator)


State 78

    6 symbol_definition: symbol_key FIELDS field_initializer COLON symbol_value_list . SEMICOLON
   13 symbol_value_list: symbol_value_list . VBAR symbol_value

    SEMICOLON  shift, and go to state 96
    VBAR       shift, and go to state 35

